[gd_scene load_steps=2 format=3 uid="uid://cerl78o1updw0"]

[ext_resource type="Script" uid="uid://diqgphelmlh6g" path="res://Scripts/UI/PauseMenu.gd" id="1_eod5q"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_eod5q")

[node name="BackgroundOverlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.498039)

[node name="ButtonsContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(200, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.5
offset_right = 100.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
text = "Continuar"

[node name="OptionsButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
text = "Opções
"

[node name="QuitToMainMenuButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
text = "Sair para o menu
"
